# EU4dll

./: .clinerules  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  Makefile  README.md  dub.json  dub.selections.json  dummy.d
.gemini/commands/dev/: c.toml  code-review.toml  debug-error.toml  done.toml  explain-code.toml  fetch.toml  lint-fix.toml  refactor-code.toml  test-all.toml
.gemini/commands/docs/: create-architecture-documentation.toml  create-onboarding-guide.toml  generate-api-documentation.toml  migration-guide.toml  troubleshooting-guide.toml  update-mb.toml
.gemini/commands/git/: commit.toml  create-issue.toml  (+3 more)
.github/workflows/: build.yml
Plugin/: CMakeLists.txt  byte_pattern.h  stdinc.h
Plugin64/: CMakeLists.txt
memory-bank/: 01_project_overview.md  02_architecture.md  03_development_guide.md  04_testing_guide.md  06_git_workflow.md  07_ai_workflow.md  08_conversation_guidelines.md  MANUAL-TEST.txt  TODO.txt  linux_development_notes.md
memory-bank/details/: linux_patching_details.md
source/: app.d
source/plugin/: byte_pattern.d  constant.d  date.d  dllmain.d  event_dialog.d  file_save.d  font.d  ime.d  input.d  list_field_adjustment.d  localization.d  main_text.d  map_adjustment.d  map_justify.d  map_popup.d  map_view.d  memory_pointer.d  misc.d  mod.d  options.d  plugin_version.d  singleton.d  tooltip_and_button.d
tests/: Makefile
tests/plugin/: test_byte_pattern.d  test_memory_pointer.d  test_mod.d
tests/poc/: Makefile  dllmain.d  dummy.d
tests/resources/: test_translation.json  test_translation.yml
(+56 files in other folders)
